# split-steal

./: .gitignore  README.md  example_game.jsonl  main.py  pyproject.toml
game/: chat_manager.py  game_engine.py  llm_client.py  llm_player.py  logger.py  prompts.py
game/llms/: base.py  bedrock.py  fireworks.py  openai.py
