[tool.poetry]
name = "split-steal"
version = "0.1.0"
description = "Game of split or steal played by LLMs against each other"
authors = ["Macey Baker <macebake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
openai = "^1.65.4"
boto3 = "^1.37.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
